--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-owl-carousel-o": "^15.0.0",
     "ngx-progressbar": "^9.0.0",
     "ngx-skeleton-loader": "^6.0.0",
     "ngx-toastr": "^16.0.2",
